--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Projeto JavaScript com Mocha para testes automatizados.",
   "main": "src/sum.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha 'test/**/*.test.js' --timeout 10000"
   },
   "devDependencies": {
-    "mocha": "^10.0.0"
+    "mocha": "^10.8.2"
   },
   "dependencies": {
+    "chai": "^4.5.0",
     "express": "^5.1.0",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4",
     "swagger-ui-express": "^5.0.1"
   }
 }
